--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.3.1",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
